tests/baselines/reference/importDeferFromInvalid.errors.txt
b.ts(1,8): error TS18058: Default imports are not allowed in a deferred import.


==== a.ts (0 errors) ====
    export default 2;
    
==== b.ts (1 errors) ====
    import defer from from "./a.js";
           ~~~~~~~~~~
!!! error TS18058: Default imports are not allowed in a deferred import.
    